@@ -36,7 +36,7 @@
 							 * @since 16.12
 							 * */
 							
-							echo apply_filters( 'manduca_copyright_text' , sprintf ('<p>&copy; %1$s, %2$s</p>', date( 'Y' ), get_bloginfo() ) ) ;
+							echo apply_filters( 'manduca_copyright_text' , sprintf ('<p class="copyright-text">&copy; %1$s, %2$s</p>', date( 'Y' ), get_bloginfo() ) ) ;
 							?>
 								
 						</div><!-- .site-info -->
